--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="green_shade_three">#5ABF00</color>
     <color name="green_shade_three_tx">#ac5abf00</color>
     <color name="green_shade_four">#77FF00</color>
+    <color name="green_shade_three_tx_tx">#3c5abf00</color>
 
     <color name="red_shade_one">#400007</color>
     <color name="red_shade_two">#7F000D</color>
