--- a/app/src/main/res/layout/fragment_ram.xml
+++ b/app/src/main/res/layout/fragment_ram.xml
@@ -25,6 +25,42 @@
                 android:background="@color/colorMajorDark"
                 tools:ignore="ContentDescription,SmallSp" />
 
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ram_used"
+                        android:textSize="18sp"
+                        android:textColor="@color/colorTextOne"
+                        android:padding="10sp"
+                        android:id="@+id/ram_used"/>
+
+                    <ProgressBar
+                        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="20sp"
+                        tools:progress="2"
+                        android:layout_marginLeft="10sp"
+                        android:layout_marginRight="10sp"
+                        android:layout_marginBottom="10sp"
+                        android:progressDrawable="@drawable/progressbar_states"
+                        android:layout_gravity="top"
+                        android:id="@+id/ram_progress"
+                        android:max="100"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
             <include layout="@layout/layout_about_sensor" />
 
             <include layout="@layout/layout_basic_information" />
