--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,14 +16,13 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        app:cardElevation="5sp">
+        android:layout_height="?android:attr/actionBarSize">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="30sp"
+            android:textSize="22sp"
             android:textColor="@color/colorMajorDarkMuchLighter"
             android:text="@string/app_name_simple"/>
 
