--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -26,7 +26,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="?android:attr/actionBarSize"
-                    android:id="@+id/list_screen">
+                    android:id="@+id/list_screen"
+                    android:background="@color/colorIntensity8">
 
                     <!--<android.support.v7.widget.CardView-->
                         <!--android:layout_width="match_parent"-->
@@ -51,13 +52,34 @@
 
                     <!--</android.support.v7.widget.CardView>-->
 
-                    <android.support.v7.widget.RecyclerView
+                    <android.support.v4.widget.NestedScrollView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/recycler"
-                        android:background="@color/colorIntensity8">
+                        android:descendantFocusability="blocksDescendants">
 
-                    </android.support.v7.widget.RecyclerView>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="5sp"
+                                tools:ignore="ContentDescription,SmallSp" />
+
+                            <android.support.v7.widget.RecyclerView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/recycler"
+                                android:layout_marginLeft="5sp"
+                                android:layout_marginRight="5sp"
+                                android:nestedScrollingEnabled="false">
+
+                            </android.support.v7.widget.RecyclerView>
+
+                        </LinearLayout>
+
+                    </android.support.v4.widget.NestedScrollView>
 
                 </FrameLayout>
 
@@ -100,7 +122,7 @@
                                 android:layout_height="match_parent"
                                 android:gravity="center"
                                 android:textSize="28sp"
-                                android:textColor="@color/colorMajorDarkMuchLighter"
+                                android:textColor="@color/colorMajorDark"
                                 tools:text="Diagnostic"
                                 android:id="@+id/app_header_text"/>
 
