--- a/app/src/main/res/layout/fragment_ram.xml
+++ b/app/src/main/res/layout/fragment_ram.xml
@@ -28,7 +28,9 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp">
+                android:layout_marginTop="10sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
