--- a/app/src/main/res/layout/layout_about_sensor.xml
+++ b/app/src/main/res/layout/layout_about_sensor.xml
@@ -2,9 +2,9 @@
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="15sp"
-    app:cardElevation="5sp"
-    android:layout_margin="10sp"
+    android:layout_marginTop="10sp"
+    android:layout_marginLeft="10sp"
+    android:layout_marginRight="10sp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
