--- a/app/src/main/res/layout/row_dashboard.xml
+++ b/app/src/main/res/layout/row_dashboard.xml
@@ -6,9 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:layout_width="200sp"
     android:orientation="vertical"
-    android:layout_margin="8sp"
-    app:cardCornerRadius="10sp"
-    app:cardElevation="5sp">
+    android:layout_margin="5sp"
+    app:cardCornerRadius="5sp">
 
     <LinearLayout
         android:layout_width="match_parent"
