--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="0sp"
@@ -34,10 +35,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     tools:text="FINGERPRINT SENSOR TEST"
-                    android:paddingTop="10sp"
-                    android:paddingBottom="10sp"
+                    android:paddingTop="5sp"
+                    android:paddingBottom="5sp"
                     android:paddingLeft="15sp"
                     android:textColor="@color/colorMajorDark"
                     android:id="@+id/data_name"
@@ -46,17 +47,17 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/colorMajorDark"
-                    app:cardCornerRadius="13sp"
+                    app:cardBackgroundColor="@color/colorMajorDarkMuchLighter"
+                    app:cardCornerRadius="11sp"
                     app:cardElevation="0sp"
                     android:layout_marginLeft="10sp"
                     android:layout_marginBottom="10sp"
                     tools:ignore="RtlHardcoded,RtlSymmetry">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
+                        android:textSize="12sp"
                         tools:text="Sensor"
                         android:textColor="@color/white"
                         android:paddingLeft="10sp"
@@ -71,16 +72,16 @@
             </LinearLayout>
 
             <FrameLayout
-                android:layout_width="60sp"
-                android:layout_height="60sp"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5sp"
-                android:padding="5sp">
+                android:padding="3sp">
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:cardCornerRadius="25sp"
+                    app:cardCornerRadius="20sp"
                     app:cardElevation="0sp"
                     app:cardBackgroundColor="@color/colorPrimaryLightLight">
 
@@ -102,7 +103,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="3sp"
-            android:background="@color/colorMajorDark"
+            android:background="@color/colorMajorDarkMuchLighter"
             tools:ignore="ContentDescription,SmallSp" />
 
         <FrameLayout
