--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,13 +16,15 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="22sp"
+            android:textSize="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
             android:textColor="@color/colorMajorDarkMuchLighter"
             android:text="@string/app_name_simple"/>
 
@@ -32,7 +34,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15sp"
         android:layout_marginBottom="5sp"
@@ -44,13 +46,13 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="20sp"
-            android:layout_marginBottom="10sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginLeft="15sp"
+            android:layout_marginRight="15sp"
+            android:layout_marginBottom="6sp"
+            android:layout_marginTop="6sp"
             android:textSize="16sp"
             android:textColor="@color/colorMajorDarkMuchLighter"
             android:text="CHOOSE CATEGORY"/>
