--- a/app/src/main/res/layout/fragment_storage.xml
+++ b/app/src/main/res/layout/fragment_storage.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="3sp"
-                android:background="@color/colorMajorDark"
+                android:background="@color/color_fragment_top_line"
                 tools:ignore="ContentDescription,SmallSp" />
 
             <android.support.v7.widget.CardView
