--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -36,8 +36,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15sp"
-        android:layout_marginBottom="5sp"
+        android:layout_marginTop="8sp"
+        android:layout_marginBottom="8sp"
         android:layout_marginLeft="20sp"
         android:layout_marginRight="20sp"
         app:cardCornerRadius="20sp"
@@ -54,7 +54,7 @@
             android:layout_marginBottom="6sp"
             android:layout_marginTop="6sp"
             android:textSize="16sp"
-            android:textColor="@color/colorMajorDarkMuchLighter"
+            android:textColor="@color/colorTextTwo"
             android:text="CHOOSE CATEGORY"/>
 
     </android.support.v7.widget.CardView>
