--- a/app/src/main/res/layout/fragment_accelerometer_test.xml
+++ b/app/src/main/res/layout/fragment_accelerometer_test.xml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/background"
+    android:orientation="vertical"
     tools:context=".view.test_activity.tests.accelerometer_test_fragment.AccelerometerTestFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/shake_to_change_screen_color"
-        android:textColor="@color/colorMajorDark"
-        android:background="@color/white_tx"
-        android:gravity="center_horizontal"
-        android:layout_gravity="bottom"
-        android:paddingTop="20sp"
-        android:paddingBottom="20sp"
-        android:textSize="20sp"/>
+    <include layout="@layout/graph_test_common_layout"/>
 
-</FrameLayout>
+</LinearLayout>
