--- a/app/src/main/res/layout/graph_test_common_layout.xml
+++ b/app/src/main/res/layout/graph_test_common_layout.xml
@@ -21,7 +21,7 @@
             android:layout_marginRight="20sp"
             android:layout_marginTop="15sp"
             android:layout_marginBottom="10sp"
-            app:cardElevation="5sp"
+            app:cardElevation="10sp"
             app:cardCornerRadius="3sp">
 
             <com.jjoe64.graphview.GraphView
@@ -42,48 +42,72 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardElevation="7sp"
+                app:cardCornerRadius="3sp"
                 android:layout_marginLeft="20sp"
                 android:layout_marginRight="20sp"
-                android:layout_marginTop="10sp"
-                android:layout_marginBottom="10sp">
+                android:layout_marginTop="15sp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0sp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/custom_holo_red"
+                            android:textSize="18sp"
+                            android:text="@string/x"
+                            android:padding="10sp"
+                            android:gravity="center"
+                            android:id="@+id/x_val"/>
+
+                        <TextView
+                            android:layout_width="0sp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/custom_holo_green"
+                            android:textSize="18sp"
+                            android:text="@string/y"
+                            android:padding="10sp"
+                            android:gravity="center"
+                            android:id="@+id/y_val"/>
+
+                        <TextView
+                            android:layout_width="0sp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/custom_holo_blue"
+                            android:textSize="18sp"
+                            android:text="@string/z"
+                            android:padding="10sp"
+                            android:gravity="center"
+                            android:id="@+id/z_val"/>
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="1sp"
+                        android:background="@color/colorTextFive"
+                        tools:ignore="ContentDescription,SmallSp" />
 
                     <TextView
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="18sp"
-                        android:text="@string/x"
+                        android:textColor="@color/colorTextTwo"
+                        android:textSize="15sp"
+                        android:text="@string/units"
                         android:padding="10sp"
                         android:gravity="center"
-                        android:id="@+id/x_val"/>
-
-                    <TextView
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/holo_green_dark"
-                        android:textSize="18sp"
-                        android:text="@string/y"
-                        android:padding="10sp"
-                        android:gravity="center"
-                        android:id="@+id/y_val"/>
-
-                    <TextView
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/holo_blue_dark"
-                        android:textSize="18sp"
-                        android:text="@string/z"
-                        android:padding="10sp"
-                        android:gravity="center"
-                        android:id="@+id/z_val"/>
+                        android:id="@+id/units"/>
 
                 </LinearLayout>
 
