--- a/app/src/main/res/layout/fragment_step_detector_test.xml
+++ b/app/src/main/res/layout/fragment_step_detector_test.xml
@@ -1,14 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.test_activity.tests.step_detector_test_fragment.StepDetectorTestFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            app:cardBackgroundColor="@color/primary_new_two">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:padding="10sp"
+                android:gravity="center"
+                android:text="@string/walk_about_15_steps"/>
+
+        </android.support.v7.widget.CardView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFour"
+            android:layout_marginBottom="5sp"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="@string/total_number_of_steps_detected"
+            android:layout_marginTop="10sp"
+            android:paddingBottom="10sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorMajorDark"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="@string/since_last_device_reboot"
+            android:paddingBottom="10sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorMajor"/>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="100sp"
+            app:cardElevation="10sp"
+            app:cardCornerRadius="3sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="20sp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textSize="35sp"
+                android:padding="20sp"
+                android:text="@string/default_count"
+                android:textColor="@color/colorMajor"
+                android:id="@+id/steps_detected"/>
+
+        </android.support.v7.widget.CardView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFour"
+            android:layout_marginBottom="5sp"
+            tools:ignore="ContentDescription,SmallSp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="@string/total_distance_covered"
+            android:layout_marginTop="10sp"
+            android:paddingBottom="10sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorMajorDark"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="@string/since_last_device_reboot"
+            android:paddingBottom="10sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorMajor"/>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="100sp"
+            app:cardElevation="10sp"
+            app:cardCornerRadius="3sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="20sp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textSize="35sp"
+                android:padding="20sp"
+                android:text="@string/default_count"
+                android:textColor="@color/colorMajor"
+                android:id="@+id/distance_covered"/>
+
+        </android.support.v7.widget.CardView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFour"
+            android:layout_marginBottom="5sp"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="1"/>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            app:cardCornerRadius="20sp"
+            app:cardElevation="0sp"
+            app:cardBackgroundColor="@color/red_shade_four">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:padding="10sp"
+                android:gravity="center"
+                android:text="@string/recommended_counter"/>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
