categories adapter for new discover screen

--- a/app/src/main/res/drawable/card_normal.xml
+++ b/app/src/main/res/drawable/card_normal.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorWhiteShade"/>
+    <!--<gradient android:startColor="#00F5A7"-->
+        <!--android:endColor="#17BAEB"-->
+        <!--android:angle="45" />-->
 </shape>
