--- a/app/src/main/res/layout/row_dashboard.xml
+++ b/app/src/main/res/layout/row_dashboard.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5sp"
-    app:cardCornerRadius="5sp">
+    android:layout_margin="7sp"
+    app:cardCornerRadius="5sp"
+    tools:ignore="RtlHardcoded">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5sp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingLeft="5sp"
+        android:paddingTop="5sp"
+        android:paddingBottom="5sp"
+        android:paddingRight="20sp"
         android:orientation="horizontal"
-        android:background="@drawable/card_background"
+        android:background="@drawable/card_dashboard_bg"
         android:id="@+id/parent_card">
 
         <FrameLayout
@@ -27,7 +31,7 @@
                 android:layout_height="match_parent"
                 app:cardCornerRadius="26sp"
                 app:cardElevation="0sp"
-                app:cardBackgroundColor="@color/colorMajorDarkMuchLighter">
+                app:cardBackgroundColor="@color/white">
 
             </android.support.v7.widget.CardView>
 
@@ -36,7 +40,7 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/baseline_verified_user_black_48"
                 android:padding="10sp"
-                android:tint="@color/white"
+                android:tint="@color/colorMajorDarkMuchLighter"
                 tools:ignore="ContentDescription"
                 android:id="@+id/image"/>
 
@@ -55,7 +59,7 @@
                 android:layout_marginBottom="3sp"
                 android:layout_marginLeft="15sp"
                 android:layout_marginRight="5sp"
-                android:textColor="@color/colorMajorDark"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:text="DIAGNOSTIC"
                 android:id="@+id/name"
@@ -69,12 +73,12 @@
                 android:layout_marginLeft="15sp"
                 android:layout_marginRight="5sp"
                 app:cardCornerRadius="10sp"
-                app:cardBackgroundColor="@color/colorMajorDarkMuchLighter">
+                app:cardBackgroundColor="@color/white">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorMajorDarkMuchLighter"
                     android:textSize="12sp"
                     android:paddingTop="3sp"
                     android:paddingBottom="3sp"
