--- a/app/src/main/res/layout/row_categories_pager.xml
+++ b/app/src/main/res/layout/row_categories_pager.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="7sp"
     app:cardCornerRadius="5sp"
     tools:ignore="RtlHardcoded"
     android:id="@+id/card_view">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="5sp"
         android:paddingTop="5sp"
